--- a/src/styles/board.css
+++ b/src/styles/board.css
@@ -1,5 +1,5 @@
 /************************************************
-    BOARD
+    BOARD PAGE COMPONENTS
 *************************************************/
     
 .board {
