--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -2,17 +2,20 @@
     BASE VIEW COMPONENTS
 **************************************************/
 
-#BaseContainer {
-    background-image: linear-gradient(to right, #01D5F4, #123884, );
-    padding-top: 10vh;
-    height: 100vh;
-    /* border: solid red; */
+.BaseContainer {
+    background-image: linear-gradient(90deg, #01D5F4, #123884 );
+    padding-top: 12vh;
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
 }
 
 #NavBar {
     position: fixed;
     top: 0;
-    background-image: linear-gradient(90deg, navy, purple);
+    /* background-image: linear-gradient(90deg, skyblue, purple); */
+    /* background-color: white; */
+    /* opacity: 0.7; */
     height: 10vh;
     width: 100%;
     color: white;
@@ -21,5 +24,5 @@
 }
 
 .col, .col-2 {
-    border: solid red;
+    /* border: solid red; */
 }
