--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -1,9 +1,39 @@
 /*************************************************
+    BASE VIEW COMPONENTS
+**************************************************/
+
+.BaseContainer {
+    background-image: linear-gradient(90deg, skyblue, gainsboro );
+    padding-top: 20vh;
+    width: 100%;
+    height: 100%;
+    min-height: 120vh;
+}
+
+#NavBar {
+    position: fixed;
+    top: 0;
+    background-color: white;
+    opacity: 0.8;
+    height: 12vh;
+    width: 100%;
+    color: black;
+    z-index: 2;
+}
+
+.col, .col-1, .col-2 {
+    /* border: solid red; */
+}
+
+.col > h2 {
+    padding-left: 1%;
+}
+
+/*************************************************
     MAIN VIEW COMPONENTS
 **************************************************/
 
 #MainContainer {
-    /* background-color: white; */
     height: auto;
     min-height: 80vh;
     width: 80vw;
@@ -20,11 +50,19 @@ a {
 }
 
 a:hover {
-    color: skyblue
+    color: black;
+    text-decoration: none;
 }
 
 input {
     border-radius: 8px;
+}
+
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
 }
 
 .fas:hover {
@@ -38,6 +76,24 @@ input {
 #AddCardContainer {
     padding: 2%;
     color: white;
+}
+
+.modalInput {
+    width: 90%;
+    padding: 1%;
+}
+
+.card {
+    height: 40vh;
+    width: 30vw;
+    border-radius: 10px;
+}
+
+.cardTitle {
+    padding: 0;
+    color: black;
+    border-bottom: solid red;
+    border-width: thin;
 }
 
 /*------------------------------------------------
