--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -163,20 +163,28 @@ button:focus {
     background-image: linear-gradient(90deg, midnightblue, rgb(151, 160, 212));
     width: 70vw;
     margin-bottom: 1%;
-    padding: 1%;
+    padding: 0;
     color: white;
-    /* color: a; */
     border-radius: 10px;
 }
 
-.CollectionRow {
-    width: 100%;
-    padding: 0;
+.CollectionHead {
+    margin: auto;
+    padding: 3%;
 }
 
-.CollectionCol {
-    /* padding: 0; */
-    /* border: solid red; */
+.CollectionBody {
+    background-image: linear-gradient(90deg, #8b9dc3, #dfe3ee);
+    /* background-color: #8b9dc3; */
+    padding: 3%;
+    margin-left: auto;
+    margin-right: auto;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.CollectionButton {
+    font-size: 20px;
 }
 
 /*------------------------------------------------
@@ -191,10 +199,10 @@ button:focus {
     OTHER
 **************************************************/
 
-a > h4 {
+a > h2, a > h4 {
     color: black;
 }
 
-a > h4:hover {
+a > h2:hover, a > h4:hover {
     color: navy;
 }
