--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -7,7 +7,7 @@
     padding-top: 20vh;
     width: 100%;
     height: 100%;
-    min-height: 120vh;
+    min-height: 100vh;
 }
 
 #NavBar {
@@ -101,10 +101,14 @@ button:focus {
 }
 
 #AddCardButton {
-    bottom: 230px;
+    bottom: 320px;
 }
 
 #SaveCardsButton {
+    bottom: 230px;
+}
+
+#ClearCardsButton {
     bottom: 140px;
 }
 
