--- a/src/styles/board.css
+++ b/src/styles/board.css
@@ -1,36 +1,20 @@
 /************************************************
-    BOARD PAGE COMPONENTS
+    BOARD VIEW COMPONENTS
 *************************************************/
     
-.board {
-    text-align: center;
-}
-  
-.boardHeader {
-    background-color: #282c34;
-    min-height: 80px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-    margin-bottom: 30px;
-}
-  
-h1 {
-    margin-bottom: 0;
+#MemoryGameContainer {
+    width: auto;
     padding: 0;
 }
-  
-p {
-    color: #666666;
+
+.row, .col {
+    height: auto;
 }
-  
+
 .boardLink {
     color: #61dafb;
 }
-  
+
 @keyframes App-logo-spin {
     from {
         transform: rotate(0deg);
@@ -46,8 +30,8 @@ p {
 
 .flashCard {
     display: inline-block;
-    width: 150px;
-    height: 80px;
+    width: 20vw;
+    height: 18vh;
     margin: 5px;
     cursor: pointer;
     position: relative;
@@ -77,22 +61,29 @@ p {
 }
 
 .flashCardFront {
-    font-size: 30px;
-    padding-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1%;
     transform: rotateY(180deg);
 }
 
-.flashCardBack {
-    background: linear-gradient(
-        45deg,
-        #606dbc,
-        green 10px,
-        orange 10px,
-        #465298 20px
-      );
+.flashCardFront > h5 {
+    overflow: hidden;
 }
 
-.flashCardBack > img {
-    width: 60px;
-    padding-top: 27px;
+.flashCardFront > p {
+    font-size: 12px;
+    overflow: hidden;
+}
+
+.flashCardBack {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: linear-gradient(90deg, #606dbc, #465298);
+}
+
+.flashCardBack > h4 {
+    color: white;
 }
